--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "foolz/sphinxql-query-builder": "1.1.0"
+        "foolz/sphinxql-query-builder": "^1.1"
     },
     "autoload": {
         "psr-4": { "Chebur\\SphinxBundle\\": "" }
