--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,12 @@
         "php": "^7.1",
 
         "foolz/sphinxql-query-builder": "^1.2",
-        "symfony/console":              "^3.4",
-        "symfony/framework-bundle":     "^3.4",
-        "symfony/process":              "^3.4",
+        "symfony/console":              "^3.4 || ^4.0",
+        "symfony/framework-bundle":     "^3.4 || ^4.0",
+        "symfony/process":              "^3.4 || ^4.0",
         "twig/twig":                    "^1.35 || ^2.4.4"
     },
     "require-dev": {
-        "symfony/stopwatch": "^3.4"
+        "symfony/stopwatch": "^3.4 || ^4.0"
     }
 }
