--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,9 @@
         "php": "^7.1",
 
         "foolz/sphinxql-query-builder": "^2.0",
-        "symfony/console":              "^3.4",
-        "symfony/framework-bundle":     "^3.4",
-        "symfony/process":              "^3.4",
+        "symfony/console":              "^3.4 || ^4.0",
+        "symfony/framework-bundle":     "^3.4 || ^4.0",
+        "symfony/process":              "^3.4 || ^4.0",
         "twig/twig":                    "^1.35 || ^2.4.4"
     },
     "require-dev": {
